force-app/main/default/objects/Component_Service__c/Component_Service__c.object-meta.xml
<CustomObject>
    <label>Component Service</label>
    <nameField>
        <displayFormat>CS-{00000}</displayFormat>
        <label>Component Service Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Component Services</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>