force-app/main/default/objects/Component_Service__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Component Services</relationshipLabel>
    <relationshipName>Component_Services</relationshipName>
    <type>Lookup</type>
</CustomField>