force-app/main/default/objects/Component_Service__c/fields/Service_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Type</label>
    <referenceTo>Service_Type__c</referenceTo>
    <relationshipLabel>Component Services</relationshipLabel>
    <relationshipName>Component_Services</relationshipName>
    <type>Lookup</type>
</CustomField>