force-app/main/default/objects/Component_Service__c/fields/Service_Type_Description__c.field-meta.xml
<CustomField>
    <fullName>Service_Type_Description__c</fullName>
    <description>Customer facing service type description.</description>
    <label>Service Type Description</label>
    <type>TextArea</type>
</CustomField>