force-app/main/default/objects/Component_Service__c/fields/Service_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>Service_Type_Name__c</fullName>
    <formula>Service_Type__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Type Name</label>
    <type>Text</type>
</CustomField>