force-app/main/default/objects/Component_Service__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Service_Type_Name__c</columns>
    <columns>Service_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>