force-app/main/default/objects/Component_Service__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Product__c</columns>
    <columns>Service_Type_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>